--- a/fe_nutriapp/pubspec.yaml
+++ b/fe_nutriapp/pubspec.yaml
@@ -34,6 +34,13 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  http: ^1.6.0
+  flutter_secure_storage: ^9.2.4
+  go_router: ^17.0.0
+  intl: ^0.20.2
+  pie_chart: ^5.4.0
+  image_picker: ^1.2.1
+  provider: ^6.1.5+1
 
 dev_dependencies:
   flutter_test:
