--- a/fe_nutriapp/pubspec.yaml
+++ b/fe_nutriapp/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   pie_chart: ^5.4.0
   image_picker: ^1.2.1
   provider: ^6.1.5+1
+  jwt_decode: ^0.3.1
 
 dev_dependencies:
   flutter_test:
