--- a/fe_nutriapp/android/app/src/main/AndroidManifest.xml
+++ b/fe_nutriapp/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,13 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
+    
+    <!-- PERMISOS PARA NOTIFICACIONES (AÑADIR ANTES DE <application>) -->
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS"/>
+    <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM"/>
+    <uses-permission android:name="android.permission.USE_EXACT_ALARM"/>
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
+    <uses-permission android:name="android.permission.VIBRATE"/>
+    <uses-permission android:name="android.permission.WAKE_LOCK"/> <!-- AÑADIR ESTA LÍNEA -->
+    
     <application
         android:label="fe_nutriapp"
         android:name="${applicationName}"
@@ -30,6 +39,14 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
+        
+        <!-- RECEPTOR PARA QUE LAS NOTIFICACIONES FUNCIONEN DESPUÉS DE REINICIAR (OPCIONAL) -->
+        <receiver android:name="com.dexterous.flutterlocalnotifications.ScheduledNotificationBootReceiver"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED"/>
+            </intent-filter>
+        </receiver>
     </application>
     <!-- Required to query activities that can process text, see:
          https://developer.android.com/training/package-visibility and
