--- a/fe_nutriapp/pubspec.yaml
+++ b/fe_nutriapp/pubspec.yaml
@@ -43,6 +43,9 @@ dependencies:
   provider: ^6.1.5+1
   jwt_decode: ^0.3.1
   shared_preferences: ^2.5.3
+  flutter_local_notifications: ^19.5.0
+  timezone: ^0.10.1
+  permission_handler: ^11.3.1
 
 dev_dependencies:
   flutter_test:
