--- a/fe_nutriapp/android/app/src/main/AndroidManifest.xml
+++ b/fe_nutriapp/android/app/src/main/AndroidManifest.xml
@@ -1,17 +1,35 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
     
-    <!-- PERMISOS PARA NOTIFICACIONES (AÑADIR ANTES DE <application>) -->
+    <!-- ========== PERMISOS DE NOTIFICACIONES Y ALARMAS ========== -->
+    
+    <!-- Android 13+ (API 33): Permiso para mostrar notificaciones -->
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS"/>
+    
+    <!-- Android 12+ (API 31): Permiso para programar alarmas exactas (CRÍTICO) -->
     <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM"/>
+    
+    <!-- Android 14+ (API 34): Nuevo permiso para alarmas exactas -->
     <uses-permission android:name="android.permission.USE_EXACT_ALARM"/>
+    
+    <!-- Permiso para que las notificaciones persistan después de reiniciar -->
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
+    
+    <!-- Permiso para vibración -->
     <uses-permission android:name="android.permission.VIBRATE"/>
-    <uses-permission android:name="android.permission.WAKE_LOCK"/> <!-- AÑADIR ESTA LÍNEA -->
+    
+    <!-- Permiso para despertar el dispositivo (CRÍTICO para alarmas en segundo plano) -->
+    <uses-permission android:name="android.permission.WAKE_LOCK"/>
+    
+    <!-- Permiso para notificaciones de pantalla completa (prioridad alta) -->
+    <uses-permission android:name="android.permission.USE_FULL_SCREEN_INTENT"/>
+    
+    <!-- ========================================================== -->
     
     <application
         android:label="fe_nutriapp"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
+        
         <activity
             android:name=".MainActivity"
             android:exported="true"
@@ -20,11 +38,10 @@
             android:theme="@style/LaunchTheme"
             android:configChanges="orientation|keyboardHidden|keyboard|screenSize|smallestScreenSize|locale|layoutDirection|fontScale|screenLayout|density|uiMode"
             android:hardwareAccelerated="true"
-            android:windowSoftInputMode="adjustResize">
-            <!-- Specifies an Android theme to apply to this Activity as soon as
-                 the Android process has started. This theme is visible to the user
-                 while the Flutter UI initializes. After that, this theme continues
-                 to determine the Window background behind the Flutter UI. -->
+            android:windowSoftInputMode="adjustResize"
+            android:showWhenLocked="true"
+            android:turnScreenOn="true">
+            
             <meta-data
               android:name="io.flutter.embedding.android.NormalTheme"
               android:resource="@style/NormalTheme"
@@ -34,25 +51,30 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <!-- Don't delete the meta-data below.
-             This is used by the Flutter tool to generate GeneratedPluginRegistrant.java -->
+        
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
         
-        <!-- RECEPTOR PARA QUE LAS NOTIFICACIONES FUNCIONEN DESPUÉS DE REINICIAR (OPCIONAL) -->
-        <receiver android:name="com.dexterous.flutterlocalnotifications.ScheduledNotificationBootReceiver"
+        <!-- Receptor para notificaciones después de reiniciar el dispositivo -->
+        <receiver 
+            android:name="com.dexterous.flutterlocalnotifications.ScheduledNotificationBootReceiver"
             android:exported="false">
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED"/>
+                <action android:name="android.intent.action.MY_PACKAGE_REPLACED"/>
+                <action android:name="android.intent.action.QUICKBOOT_POWERON" />
+                <action android:name="com.htc.intent.action.QUICKBOOT_POWERON"/>
             </intent-filter>
         </receiver>
+        
+        <!-- Receptor para alarmas broadcast (permite que las notificaciones programadas funcionen) -->
+        <receiver 
+            android:name="com.dexterous.flutterlocalnotifications.ScheduledNotificationReceiver"
+            android:exported="false" />
+        
     </application>
-    <!-- Required to query activities that can process text, see:
-         https://developer.android.com/training/package-visibility and
-         https://developer.android.com/reference/android/content/Intent#ACTION_PROCESS_TEXT.
-
-         In particular, this is used by the Flutter engine in io.flutter.plugin.text.ProcessTextPlugin. -->
+    
     <queries>
         <intent>
             <action android:name="android.intent.action.PROCESS_TEXT"/>
