--- a/fe_nutriapp/pubspec.yaml
+++ b/fe_nutriapp/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   flutter_local_notifications: ^19.5.0
   timezone: ^0.10.1
   permission_handler: ^11.3.1
+  camera: ^0.11.0+2
+  speech_to_text: ^7.0.0
 
 dev_dependencies:
   flutter_test:
