--- a/fe_nutriapp/pubspec.yaml
+++ b/fe_nutriapp/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   permission_handler: ^11.3.1
   camera: ^0.11.0+2
   speech_to_text: ^7.0.0
+  fl_chart: ^0.69.0
 
 dev_dependencies:
   flutter_test:
