--- a/fe_nutriapp/pubspec.yaml
+++ b/fe_nutriapp/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_secure_storage: ^9.2.4
   go_router: ^17.0.0
   intl: ^0.20.2
+  table_calendar: ^3.0.9
   pie_chart: ^5.4.0
   image_picker: ^1.2.1
   provider: ^6.1.5+1
