--- a/fe_nutriapp/pubspec.yaml
+++ b/fe_nutriapp/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   camera: ^0.11.0+2
   speech_to_text: ^7.0.0
   fl_chart: ^0.69.0
+  home_widget: ^0.7.0
 
 dev_dependencies:
   flutter_test:
